--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,7 +1,56 @@
+@use 'variaveis';
+
 .hero {
     padding: 5.6vw;
-    min-height: 80vh;    
-    background-image: url('../images/hero_desktop.jpeg');
-    
-    
+    min-height: 80vh;
+    background-image: url(../images/hero_desktop.jpeg);
+    text-align: center;
+    background-size: cover;
+    &__content {
+        position: absolute;
+        top: 5.6vw;
+        left: 5.6vw;
+        width: 30%; /* Reduzida para 30% da largura da .hero */
+        max-width: 480px; /* Limitar a largura máxima a 480px */
+        min-width: 250px; /* Garante uma largura mínima menor */
+        
+        &__branding {
+            max-width: 100%;
+            margin-bottom: 38px;
+        }
+
+        .title--small {
+            margin-bottom: 64px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        &__combos {
+            display: flex;
+            justify-content: space-between;
+
+            &__combo {
+                width: calc(50% - 12px);
+
+                img {
+                    max-height: 60px;
+                }
+
+                button {
+                    display: block;
+                    width: 100%;
+                    height: 60px;
+                    font-size: 18px;
+                    color: variaveis.$corTextoSecundario;
+                    background-color: #6421ff;
+                    text-transform: uppercase;
+                    border-radius: 4px;
+                    margin-top: 2vw;
+                    margin-bottom: 8px;
+                }
+            }
+        }
+    }
 }
