--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,21 @@
 @use 'hero';
+@use 'variaveis';
 
+@font-face {
+    font-family: 'Avenir';
+    src: url('../../assets/fonts/Avenir-Regular.woff2') format('woff2'),
+         url('../../assets/fonts/Avenir-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'Avenir';
+    src: url('../../assets/fonts/Avenir-Bold.woff2') format('woff2'),
+         url('../../assets/fonts/Avenir-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
 
 * {
     margin: 0;
@@ -8,25 +23,22 @@
     box-sizing: border-box;
 }
 
-$corDeFundo: #040714;
-$corTextoPrincipal: silver;
-$corTextoSecundario: #f9f9f9;
-
-body{
-    background-color: $corDeFundo;
+body {
+    background-color: variaveis.$corDeFundo;
+    font-family: 'Avenir', sans-serif;
 }
 
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
     line-height: $fontSize + 10px;
-    color: $corTextoPrincipal;
+    color: variaveis.$corTextoPrincipal;
 } 
 
 @mixin title($fontSize: 40px){
     @include text($fontSize);
-    color: $corTextoSecundario;
+    color: variaveis.$corTextoSecundario;
 }
-   
+
 .text--big {
     @include text(18px);
 }
@@ -35,11 +47,11 @@ body{
     @include text;
 }
 
-.text--small{
+.text--small {
     @include text(12px);
 }
 
-.title--big{
+.title--big {
     @include title(44px);
 }
 
@@ -50,8 +62,9 @@ body{
 .title--small {
     @include text(12px);
 }
+
 .link-text {
     @include text(18px);
-    color: $corTextoSecundario;
+    color: variaveis.$corTextoSecundario;
     text-decoration: underline;
 }
