--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-@use 'hero';
 @use 'variaveis';
+@use 'hero';
+@use 'shows';
+@use 'plans';
+
 
 @font-face {
     font-family: 'Avenir';
@@ -21,12 +24,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Avenir', sans-serif;
 }
+
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: 'Avenir', sans-serif;
 }
+   
 
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
@@ -60,7 +65,7 @@ body {
 }
 
 .title--small {
-    @include text(12px);
+    @include text(28px);
 }
 
 .link-text {
@@ -68,3 +73,18 @@ body {
     color: variaveis.$corTextoSecundario;
     text-decoration: underline;
 }
+
+.button {
+    
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+}
+  
