--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,21 +2,34 @@
 
 .hero {
     padding: 5.6vw;
-    min-height: 100vh;
+    min-height: 80vh;
     background-image: url(../images/hero_desktop.jpeg);
     text-align: center;
     background-size: cover;
+
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px);
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
+    .button {
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
+
     &__content {
-        position: absolute;
-        top: 5.6vw;
-        left: 5.6vw;
-        width: 30%; /* Reduzida para 30% da largura da .hero */
-        max-width: 480px; /* Limitar a largura máxima a 480px */
-        min-width: 250px; /* Garante uma largura mínima menor */
-        
+        max-width: 640px;
+
         &__branding {
-            max-width: 100%;
-            margin-bottom: 38px;
+            max-width: 320px;
+            margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
 
         .title--small {
@@ -25,30 +38,30 @@
 
         p {
             margin-bottom: 20px;
+
+            &:last-child {
+                margin-top: 60px;
+            }
         }
 
         &__combos {
             display: flex;
             justify-content: space-between;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
 
-                img {
-                    max-height: 60px;
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
                 }
 
-                button {
-                    display: block;
-                    width: 100%;
-                    height: 60px;
-                    font-size: 18px;
-                    color: variaveis.$corTextoSecundario;
-                    background-color: #6421ff;
-                    text-transform: uppercase;
-                    border-radius: 4px;
-                    margin-top: 2vw;
-                    margin-bottom: 8px;
+                img {
+                    max-height: 60px;
                 }
             }
         }
