--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -1,9 +1,8 @@
 .plans {
     padding: 5.6vw;
-  
 
     h2 {
-        text-align: center;    
+        text-align: center;
     }
 
     &__list {
@@ -11,30 +10,38 @@
         justify-content: space-around;
         margin-top: 50px;
 
+        @media (max-width: 768px) {
+            display: block;
+        }
+
+        .button {
+            margin-top: 24px;
+        }
+        
         &__item {
             text-align: center;
-            padding: 66px 44px 44px;
+            padding: 60px 44px 44px;
             max-width: 380px;
             width: 100%;
 
             &:nth-child(2) {
-                background-image: url(../images/fundo_combo_plus.png);
+                background-image: url(../images/fundo_combo_plus.png); 
                 background-repeat: no-repeat;
                 background-size: contain;
             }
 
             img {
-                height: 83px
-            };
+                height: 83px;
+            }
+
+            strong {
+                display: block;
+                margin-top: 24px;
+            }
         }
 
-        strong {
-
-            display: block;
-            margin-top: 24px;
-
-        }
     }
+
     p {
         text-align: center;
     }
