--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -1,39 +1,45 @@
 @use 'variaveis';
 
-
 .shows {
-padding: 2vw 5.6vw;
-min-height: 50vw;
+    padding: 2vw 5.6vw;
+    min-height: 50vw;
 
     &__list {
-        margin-top: 45px;
+        margin-top: 44px;
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
-        &--is-active{
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        &--is-active {
             display: grid;
         }
 
-
-        &__item{
-
+        &__item {
             img {
                 max-width: 100%;
                 border-radius: 4px;
-
             }
         }
     }
 
     &__tabs {
-display: flex;
-justify-content: center;
+        display: flex;
+        justify-content: center;
+
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
 
         &__button {
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
-            border: none;          
+            border: none;
             padding-bottom: 5px;
             background: none;
             text-transform: uppercase;
@@ -45,6 +51,9 @@ justify-content: center;
                 border-color: variaveis.$corTextoSecundario;
             }
 
+            @media (max-width: 768px) {
+                font-size: 16px;
+            }
         }
     }
 }
